# BHI-SDK

./: CMakeLists.txt  CMakeLists.txt.common  LICENSE  SDK_license.txt  arc.cmake  build.sh  config.cmake  find_BHy2_driver_IDs.py  hash  open_source_licenses.txt  third_party_source_licenses.txt
drivers_custom/: CMakeLists.txt
drivers_custom/VirtAltitude/: CMakeLists.txt  VirtAltitude.c
drivers_custom/VirtBSXCustomAccelDataSource/: CMakeLists.txt  VirtBSXCustomAccelDataSource.c
drivers_custom/VirtBSXLeanDeviceOrientation/: CMakeLists.txt  VirtBSXLeanDeviceOrientation.c
drivers_custom/VirtIntegrateLibTemplate/: CMakeLists.txt  VirtIntegrateLibTemplate.c
drivers_custom/templates/PhysAccel/: CMakeLists.txt  PhysAccelSensor.c  PhysAccelSensor.h
drivers_custom/templates/VirtBSXCustomSource/: CMakeLists.txt  VirtBSXCustomSource.c
drivers_custom/templates/VirtBSXOutput/: CMakeLists.txt  VirtBSXOutput.c
drivers_custom/templates/VirtPhysicalOutput/: CMakeLists.txt  VirtPhysicalOutput.c  VirtPhysicalOutput.h
libs/: CMakeLists.no-source.in  CMakeLists.txt
libs/BSX/SolutionList/: csvList_SENSORHUB_AG_LOW_POWER_FUSION.txt  csvList_SENSORHUB_AMG_LOW_POWER_FUSION.txt  csvList_SENSORHUB_AM_LOW_POWER_FUSION.txt  csvList_SENSORHUB_A_LOW_POWER_FUSION.txt  csvList_SENSORHUB_BHY2_AG_1.txt  csvList_SENSORHUB_BHY2_AG_2.txt  csvList_SENSORHUB_BHY2_AMG_1.txt  csvList_SENSORHUB_BHY2_AMG_2.txt  csvList_SENSORHUB_BHY2_AMG_3.txt  csvList_SENSORHUB_BHY2_AMG_4.txt  csvList_SENSORHUB_BHY2_AMG_5.txt  csvList_SENSORHUB_BHY2_AMG_6.txt  csvList_SENSORHUB_BHY2_AMG_CALIBRATION_OFF_ALL.txt  csvList_SENSORHUB_BHY2_AMG_OFFLINE_ONLINE_COMPENSATION_ALL.txt  csvList_SENSORHUB_BHY2_AM_1.txt  csvList_SENSORHUB_BHY2_AM_2.txt  csvList_SENSORHUB_BHY2_AM_3.txt  csvList_SENSORHUB_BHY2_AM_4.txt  csvList_SENSORHUB_BHY2_AM_5.txt  csvList_SENSORHUB_BHY2_AM_6.txt  csvList_SENSORHUB_BHY2_A_1.txt
libs/BSX/includes/: bsx_constant.h  bsx_datatypes.h  bsx_library.h  bsx_multithreading_support.h  bsx_property_set_identifier.h  bsx_return_value_identifier.h  bsx_virtual_sensor_identifier.h  jli.h
libs/BSX/spec/: bsx4configSerialization_SENSORHUB_INPUT_ACC_100HZ_GYRO_100HZ_MAG_12HZ_OUTPUT_SENSORHUB_PDR.csv  bsx4configSerialization_SENSORHUB_INPUT_ACC_100HZ_GYRO_100HZ_MAG_25HZ_OUTPUT_SENSORHUB_PDR.csv  bsx4configSerialization_SENSORHUB_INPUT_ACC_100HZ_GYRO_100HZ_MAG_6HZ_OUTPUT_SENSORHUB_PDR.csv  bsx4configSerialization_SENSORHUB_INPUT_ACC_DYN_LOW_POWER_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_A.csv  bsx4configSerialization_SENSORHUB_INPUT_ACC_DYN_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_A.csv  bsx4configSerialization_SENSORHUB_INPUT_ACC_GYRO_DYN_800HZ_MAG_100HZ_OUTPUT_SENSORHUB_AMG_M100Hz.csv  bsx4configSerialization_SENSORHUB_INPUT_ACC_GYRO_DYN_LOW_POWER_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_AG.csv  bsx4configSerialization_SENSORHUB_INPUT_ACC_GYRO_DYN_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_AG.csv  bsx4configSerialization_SENSORHUB_INPUT_MAG12Hz_ACC_GYRO_DYN_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_AMG_12HzMag.csv  bsx4configSerialization_SENSORHUB_INPUT_MAG6Hz_ACC_GYRO_DYN_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_AMG_6HzMag.csv  bsx4configSerialization_SENSORHUB_INPUT_MAG_50Hz_ACC_GYRO_DYN_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_AMG.csv  bsx4configSerialization_SENSORHUB_INPUT_MAG_ACC_DYN_LOW_POWER_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_AM.csv  bsx4configSerialization_SENSORHUB_INPUT_MAG_ACC_DYN_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_AM.csv  bsx4configSerialization_SENSORHUB_INPUT_MAG_ACC_GYRO_DYN_LOW_POWER_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_AMG.csv  bsx4configSerialization_SENSORHUB_INPUT_MAG_ACC_GYRO_DYN_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_AMG.csv  bsx4configSerialization_SENSORHUB_INPUT_MAG_BMM_ACC_DYN_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_AM.csv  bsx4configSerialization_SENSORHUB_INPUT_MAG_BMM_ACC_DYN_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_PDR.csv  bsx4configSerialization_SENSORHUB_INPUT_MAG_BMM_ACC_GYRO_DYN_SAMPLE_RATE_BHY_OUTPUT_SENSORHUB_AMG.csv  bsx4configSerialization_SENSORHUB_JUMPCORRECTION_ENABLE.csv  bsx4configSerialization_SENSORHUB_MAGNETOMETERCALIBRATION_CLASSICAL.csv  bsx4configSerialization_SENSORHUB_MAGNETOMETERCALIBRATION_FAST.csv  bsx4configSerialization_SENSORHUB_SAMPLE_RATE_STRATEGY_LOW_POWER_FUSION.csv  (+23 more)
libs/BSXSupport/: BSXSupport.sdk.cmake
libs/Bootloader/: Bootloader.sdk.cmake
libs/Config/: Config.sdk.cmake
libs/FlashInterface/: FlashInterface.sdk.cmake
libs/Hooks/: Hooks.sdk.cmake
libs/HostInterface/: CMakeLists.txt
libs/HostInterfaceStreaming/: HostInterfaceStreaming.sdk.cmake
libs/I2CInterface/: I2CInterface.sdk.cmake
libs/MetawareDouble/: MetawareDouble.sdk.cmake
libs/MetawarePrintf/: MetawarePrintf.sdk.cmake
libs/OTPInterface/: CMakeLists.txt
libs/OscTrim/: OscTrim.sdk.cmake
libs/Outerloop/: Outerloop.sdk.cmake
libs/OuterloopROM/: OuterloopROM.sdk.cmake
libs/Ram/: CMakeLists.txt  Ram.sdk.cmake
libs/SPIInterface/: SPIInterface.sdk.cmake
libs/Security/: CMakeLists.txt
libs/SensorCalibration/: SensorCalibration.sdk.cmake
libs/SensorInterface/: SensorInterface.sdk.cmake
libs/Time/: Time.sdk.cmake
libs/openrtos/: openrtos.sdk.cmake
libs/template/: CMakeLists.txt  lib_template.c  template.sdk.cmake
user/: CMakeLists.txt  main.c  stack_check.c
user/RamPatches/: CMakeLists.txt  RamPatches_ReadMe.txt  custom_bsx_low_power_sensors.c  getBuildTime.c  hostboot_pin_pullup_check.c
utils/: CMakeLists.txt
utils/arc_gcc/: build.log.bz2
utils/backtrace/: CMakeLists.txt  backtrace.c  crc32.c
utils/cat/: CMakeLists.txt  cat.c
utils/elf2bin/: CMakeLists.txt  elf2bin.cpp
utils/elfio/: ByteArray.cpp  ByteArray.h  CMakeLists.txt  InitData.cpp  InitData.h  elf_support.cpp  elf_support.h  elf_support.hpp  lzrw1.c
utils/icrc/: CMakeLists.txt  icrc.cpp
utils/initdat/: CMakeLists.txt  initdatgen.cpp
utils/isign/: CMakeLists.txt  build.sh  crc32.cpp  get_pubkey_by_rest.sh  isign.cpp  rest_signing_kernel.sh  rest_signing_user.sh  user_ram_default_key.pri  user_ram_default_key.pub
utils/libs/: CMakeLists.txt
utils/stuffelf/: .gitignore  CMakeLists.txt  config.c  config.h  crc32.c  functions.h  getline.c  readme.txt  stuffelf.c
(+574 files in other folders)
